# oneharness-ui

./: .gitattributes  .gitignore  .releaserc.json  .tool-versions  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  biome.json  bunfig.toml  capture.sh  deny.toml  gh-secrets.json  justfile  lefthook.yml  llmlint.yml  nx.json  oneharness.toml  package.json  project.json  rust-toolchain.toml  screencomp.toml  tsconfig.base.json
.claude/: settings.json
.github/: CODEOWNERS  actionlint.yaml  pull_request_template.md
apps/desktop-shell/: AGENTS.md  Cargo.toml  build.rs  package.json  project.json  tauri.conf.json  tsconfig.json  wdio.conf.ts
apps/desktop-shell/capabilities/: default.json
apps/desktop-shell/icons/: icon.icns
apps/desktop-shell/src/: main.rs  runtime.rs
apps/desktop-shell/tests/e2e/: capabilities.test.ts  capabilities.ts  fixture.integration.test.ts  fixture.ts  native-startup.e2e.ts  native.e2e.ts  stage-log.test.ts  stage-log.ts  tauri-launcher-service.test.ts  tauri-launcher-service.ts  wheel-scroll.test.ts  wheel-scroll.ts
docs/: architecture.md  native-desktop-e2e.md  typescript-7.md  typescript.md  visual-testing.md
scripts/: bootstrap.sh  build-compatible-cli.sh  build-native.mjs  build-native.test.ts  build-sidecar.mjs  build-test-provider.mjs  check-boundaries.mjs  check-contract-drift.mjs  check-coverage.mjs  checkout-release.sh  checksums.mjs  dispatch-release.sh  fetch-sdk.sh  install.sh  install.test.ts  publish-ui.mjs  release-assets.mjs  release-assets.test.ts  release-output.mjs  release-output.test.ts  run-quiet.sh  (+14 more)
(+76 files in other folders)
