[package]
name = "oneharness-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-shell = "2.3.5"

[dev-dependencies]
tauri = { version = "2.11.5", features = ["test"] }
